SECD-599 Add interface and handler for fetching an asset by IP address
